# visual_navi

./: .gitignore  API_CONFIG.md  DEPLOYMENT.md  PROJECT_SUMMARY.md  README.md  TESTING.md  project_plan.md
backend/: .env.example  main.py  pyproject.toml  requirements.txt  session.py  speech.py  vision.py
deploy/: Caddyfile  navigator.service
frontend/: index.html
scripts/: start.sh  stop.sh
tests/: test_command_logic.py  test_frontend_recording_flow.py  test_speech_client.py
