[project]
name = "visual-navi-backend"
version = "0.1.0"
description = "FastAPI backend for the blind navigation demo"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.32.0",
    "python-multipart==0.0.12",
    "pillow==10.4.0",
    "openai==1.54.0",
    "google-generativeai==0.8.3",
    "python-dotenv==1.0.1",
    "httpx<0.28",
]

[tool.uv]
package = false
